--- a/BlogProject.Tests/BlogProject.Tests.csproj
+++ b/BlogProject.Tests/BlogProject.Tests.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogProject\BlogProject.csproj" />
+  </ItemGroup>
+
 </Project>
