Test Project Setup

--- a/BlogProject.Tests/BlogProject.Tests.csproj
+++ b/BlogProject.Tests/BlogProject.Tests.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\BlogProject\BlogProject.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>System</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
